[feat] 메시지 분리: GameMessage + MessageType